# ContinentalFuzzyLibrary

./: .gitignore  CMakeLists.config.template  CMakeLists.txt  DataTables example - File export.xlsx
cmake/: GoogleTest-CMakeLists.txt.in
console/src/: main.cpp
include/continental/fuzzy/: Version.h
include/continental/fuzzy/domain/fis/: MembershipFunction.h  Rule.h  RuleVariable.h  System.h  Variable.h
include/continental/fuzzy/domain/fis/definition/: AggMethods.h  AndMethods.h  Blocks.h  Connections.h  ControllerType.h  DefuzzMethods.h  FaciesAssociationsImplemented.h  Functions.h  ImpMethods.h  InputFunctions.h  OrMethods.h  OutputFunctions.h  VariableType.h
include/continental/fuzzy/domain/fis/membershipfunction/: ConstantMF.h  Gauss2MF.h  GaussMF.h  InputMembershipFunction.h  LinearMF.h  OutputMembershipFunction.h  TrapMF.h  TriMF.h
include/continental/fuzzy/domain/fis/rulevariable/: RuleInput.h  RuleOutput.h
include/continental/fuzzy/domain/fis/variable/: Input.h  Output.h
include/continental/fuzzy/domain/fuzzy/: MamdaniController.h  SugenoController.h  SugenoRule.h  SugenoRuleVariable.h  SugenoVariable.h
include/continental/fuzzy/domain/fuzzy/definition/: SugenoAggMethods.h  SugenoAndMethods.h  SugenoDefuzzMethods.h  SugenoImpMethods.h  SugenoInputFunctions.h  SugenoOrMethods.h  SugenoOutputFunctions.h
include/continental/fuzzy/domain/fuzzy/rulevariable/: SugenoRuleInput.h  SugenoRuleOutput.h
include/continental/fuzzy/domain/fuzzy/variable/: SugenoInput.h  SugenoOutput.h
include/continental/fuzzy/domain/shared/: Raster.h
include/continental/fuzzy/service/fis/: FisService.h  InputFisService.h  InputService.h  MembershipFunctionFisService.h  MembershipFunctionService.h  OutputFisService.h  OutputService.h
include/continental/fuzzy/service/fuzzy/: AbstractFuzzyControllerService.h  MamdaniControllerService.h  SugenoControllerService.h
include/continental/fuzzy/service/fuzzy/membershipfunction/: GaussMembershipFunctionService.h  GaussTwoMembershipFunctionService.h  LinearMembershipFunctionService.h  TrapezoidalMembershipFunctionService.h  TriangularMembershipFunctionService.h
include/continental/fuzzy/service/fuzzy/operators/: MaxOrMethod.h  MinAndMethod.h  NotMethod.h  ProborOrMethod.h  ProdAndMethod.h
include/continental/fuzzy/util/: RasterFileUtil.h
mock/: tipper.fis  tipper_sugeno_linear.fis  tipper_sugeno_linear_TESTE.fis
src/domain/fis/: MembershipFunction.cpp  Rule.cpp  RuleVariable.cpp  System.cpp  Variable.cpp
src/domain/fis/definition/: AggMethods.cpp  AndMethods.cpp  Blocks.cpp  Connections.cpp  ControllerType.cpp  DefuzzMethods.cpp  FaciesAssociationsImplemented.cpp  Functions.cpp  ImpMethods.cpp  InputFunctions.cpp  OrMethods.cpp  OutputFunctions.cpp  VariableType.cpp
src/domain/fis/membershipfunction/: ConstantMF.cpp  Gauss2MF.cpp  GaussMf.cpp  InputMembershipFunction.cpp  LinearMF.cpp  OutputMembershipFunction.cpp  TrapMF.cpp  TriMF.cpp
src/domain/fis/rulevariable/: RuleInput.cpp  RuleOutput.cpp
src/domain/fis/variable/: Input.cpp  Output.cpp
src/domain/fuzzy/: MamdaniController.cpp  SugenoController.cpp  SugenoRule.cpp  SugenoRuleVariable.cpp  SugenoVariable.cpp
src/domain/fuzzy/definition/sugeno/: SugenoAggMethods.cpp  SugenoAndMethods.cpp  SugenoDefuzzMethods.cpp  SugenoImpMethods.cpp  SugenoInputFunctions.cpp  SugenoOrMethods.cpp  SugenoOutputFunctions.cpp
src/domain/fuzzy/rulevariable/: SugenoRuleInput.cpp  SugenoRuleOutput.cpp
src/domain/fuzzy/variable/: SugenoInput.cpp  SugenoInput.py  SugenoOutput.cpp  SugenoOutput.py
src/domain/shared/: Raster.cpp
src/service/fis/: FisService.cpp  InputFisService.cpp  InputService.cpp  MembershipFunctionFisService.cpp  MembershipFunctionService.cpp  OutputFisService.cpp  OutputService.cpp
src/service/fuzzy/: AbstractFuzzyControllerService.cpp  MamdaniControllerService.cpp  SugenoControllerService.cpp
src/service/fuzzy/membershipfunction/: GaussMembershipFunctionService.cpp  GaussTwoMembershipFunctionService.cpp  LinearMembershipFunctionService.cpp  TrapezoidalMembershipFunctionService.cpp  TriangularMembershipFunctionService.cpp
src/service/fuzzy/operators/: MaxOrMethod.cpp  MinAndMethod.cpp  NotMethod.cpp  ProborOrMethod.cpp  ProdAndMethod.cpp
src/util/: RasterFileUtil.cpp
test/src/: main.cpp
